sourceSets {

    java9 {
        java {
            srcDirs = ['src/main/java9']
        }
    }
    java11 {
        java {
            srcDirs = ['src/main/java11']
        }
    }
}

compileJava {
    sourceCompatibility = 8
    targetCompatibility = 8
    options.fork = true
    javaCompiler = javaToolchains.compilerFor {
        languageVersion.set(JavaLanguageVersion.of(8))
    }
}

compileJava9Java {
    sourceCompatibility = 9
    targetCompatibility = 9
    options.fork = true
    javaCompiler = javaToolchains.compilerFor {
        languageVersion.set(JavaLanguageVersion.of(11))
    }
    options.compilerArgs.addAll(['--add-exports', 'java.base/jdk.internal.reflect=ALL-UNNAMED', '--add-exports', 'java.base/jdk.internal.perf=ALL-UNNAMED'])
}

compileJava11Java {
    sourceCompatibility = 11
    targetCompatibility = 11
    javaCompiler = javaToolchains.compilerFor {
        languageVersion.set(JavaLanguageVersion.of(11))
    }
    options.compilerArgs.addAll(['--add-exports', 'java.base/jdk.internal.reflect=ALL-UNNAMED', '--add-exports', 'java.base/jdk.internal.perf=ALL-UNNAMED'])
}

dependencies {
    java9Implementation files(sourceSets.main.output.classesDirs) {
        builtBy compileJava
    }
    java11Implementation files(sourceSets.main.output.classesDirs) {
        builtBy compileJava
    }

    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.18'

    // https://mvnrepository.com/artifact/org.jctools/jctools-core
    implementation(group: 'org.jctools', name: 'jctools-core', version: '4.0.6')

    java9Implementation project(':btrace-core')

    java11Implementation project(':btrace-core')

    implementation project(':btrace-core')

    testImplementation project(':btrace-core')
}

jar {
    into('') {
        from sourceSets.java9.output
    }
    into('') {
        from sourceSets.java11.output
    }
}

tasks.named('test') {
    dependsOn tasks.named('compileJava9Java'), tasks.named('compileJava11Java')
    classpath = classpath.plus(files(
        sourceSets.java9.output.classesDirs,
        sourceSets.java11.output.classesDirs))
}
